--- a/static/css/select2.css
+++ b/static/css/select2.css
@@ -102,7 +102,7 @@ html[dir="rtl"] .select2-container .select2-choice > .select2-chosen {
     text-decoration: none;
 
     border: 0;
-    background: url('../images/ico/select2.png') right top no-repeat;
+    //background: url('../images/ico/select2.png') right top no-repeat;
     cursor: pointer;
     outline: 0;
 }
@@ -241,21 +241,23 @@ html[dir="rtl"] .select2-container .select2-choice .select2-arrow {
     -webkit-box-shadow: none;
             box-shadow: none;
 
-    background: #fff url('../images/ico/select2.png') no-repeat 100% -22px;
+    background: #fff;
+    /*background: #fff url('../images/ico/select2.png') no-repeat 100% -22px;
     background: url('../images/ico/select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
     background: url('../images/ico/select2.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
     background: url('../images/ico/select2.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
-    background: url('../images/ico/select2.png') no-repeat 100% -22px, linear-gradient(to bottom, #fff 85%, #eee 99%) 0 0;
+    background: url('../images/ico/select2.png') no-repeat 100% -22px, linear-gradient(to bottom, #fff 85%, #eee 99%) 0 0;*/
 }
 
 html[dir="rtl"] .select2-search input {
     padding: 4px 5px 4px 20px;
 
-    background: #fff url('../images/ico/select2.png') no-repeat -37px -22px;
+    background: #fff;
+    /*background: #fff url('../images/ico/select2.png') no-repeat -37px -22px;
     background: url('../images/ico/select2.png') no-repeat -37px -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
     background: url('../images/ico/select2.png') no-repeat -37px -22px, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
     background: url('../images/ico/select2.png') no-repeat -37px -22px, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
-    background: url('../images/ico/select2.png') no-repeat -37px -22px, linear-gradient(to bottom, #fff 85%, #eee 99%) 0 0;
+    background: url('../images/ico/select2.png') no-repeat -37px -22px, linear-gradient(to bottom, #fff 85%, #eee 99%) 0 0;*/
 }
 
 .select2-drop.select2-drop-above .select2-search input {
@@ -263,11 +265,12 @@ html[dir="rtl"] .select2-search input {
 }
 
 .select2-search input.select2-active {
-    background: #fff url('../images/ico/select2-spinner.gif') no-repeat 100%;
+    background: #fff;
+    /*background: #fff url('../images/ico/select2-spinner.gif') no-repeat 100%;
     background: url('../images/ico/select2-spinner.gif') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #fff), color-stop(0.99, #eee));
     background: url('../images/ico/select2-spinner.gif') no-repeat 100%, -webkit-linear-gradient(center bottom, #fff 85%, #eee 99%);
     background: url('../images/ico/select2-spinner.gif') no-repeat 100%, -moz-linear-gradient(center bottom, #fff 85%, #eee 99%);
-    background: url('../images/ico/select2-spinner.gif') no-repeat 100%, linear-gradient(to bottom, #fff 85%, #eee 99%) 0 0;
+    background: url('../images/ico/select2-spinner.gif') no-repeat 100%, linear-gradient(to bottom, #fff 85%, #eee 99%) 0 0;*/
 }
 
 .select2-container-active .select2-choice,
@@ -417,7 +420,8 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-more-results.select2-active {
-    background: #f4f4f4 url('../images/ico/select2-spinner.gif') no-repeat 100%;
+    background: #f4f4f4;
+    /*background: #f4f4f4 url('../images/ico/select2-spinner.gif') no-repeat 100%;*/
 }
 
 .select2-results .select2-ajax-error {
@@ -514,7 +518,8 @@ html[dir="rtl"] .select2-container-multi .select2-choices li
 }
 
 .select2-container-multi .select2-choices .select2-search-field input.select2-active {
-    background: #fff url('../images/ico/select2-spinner.gif') no-repeat 100% !important;
+    background: #fff;
+    /*background: #fff url('../images/ico/select2-spinner.gif') no-repeat 100% !important;*/
 }
 
 .select2-default {
@@ -573,7 +578,7 @@ html[dir="rtl"] .select2-container-multi .select2-choices .select2-search-choice
 
     font-size: 1px;
     outline: none;
-    background: url('../images/ico/select2.png') right top no-repeat;
+    /*background: url('../images/ico/select2.png') right top no-repeat;*/
 }
 html[dir="rtl"] .select2-search-choice-close {
     right: auto;
