--- a/templates/ordering_login.html
+++ b/templates/ordering_login.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="form_substrate">
                     <label for="delivery-self" class="form_radio">
-                        <input type="radio" name="delivery-type" id="delivery-self"/>
+                        <input type="radio" name="delivery-type" id="delivery-self" class="s-toggle" data-toggle="pickup"/>
                         <i></i>
                         <p class="semibold">Самовывоз</p>
                         <p>Бесплатно, можно забрать — послезавтра.</p>
@@ -62,71 +62,68 @@
                         <a href="#" class="blue">Условия доставки</a>
                     </label>
                 </div>
-                <div class="mb20">
-                    <label for="delivery2" class="form_radio">
-                        <input type="radio" name="delivery-address" id="delivery2" checked/>
-                        <i></i>
-                        <span class="semibold">Основной адрес</span>
-                        <span class="def-color">(г. Москва, Химкинский бульвар, д. 5, кв.12)</span>
-                    </label>
-                </div>
-                <div class="mb20">
-                    <label for="delivery3" class="form_radio">
-                        <input type="radio" name="delivery-address" id="delivery3" />
-                        <i></i>
-                        <span class="semibold">Дача</span>
-                        <span class="def-color">(г. Реутов, ул. Туристическая, 15)</span>
-                    </label>
-                </div>
-                <div class="mb25">
-                    <label for="delivery4" class="form_radio">
-                        <input type="radio" name="delivery-address" id="delivery4" />
-                        <i></i>
-                        <span class="semibold">Новый адрес</span>
-                    </label>
-                </div>
-                <div class="form_group_full">
-                    <div class="form_inline form_group">
-                        <label for="street" class="form_label">Улица:</label>
-                        <input type="text" id="street" class="form_text" />
+                <div  data-hide="pickup">
+                    <div class="mb20">
+                        <label for="delivery2" class="form_radio">
+                            <input type="radio" name="delivery-address" id="delivery2" checked/>
+                            <i></i>
+                            <span class="semibold">Основной адрес</span>
+                            <span class="def-color">(г. Москва, Химкинский бульвар, д. 5, кв.12)</span>
+                        </label>
                     </div>
-                    <div class="form_group_x-thin fright">
-                        <label for="house" class="form_label">Дом:</label>
-                        <input type="text" id="house" class="form_text" />
+                    <div class="mb20">
+                        <label for="delivery3" class="form_radio">
+                            <input type="radio" name="delivery-address" id="delivery3" />
+                            <i></i>
+                            <span class="semibold">Дача</span>
+                            <span class="def-color">(г. Реутов, ул. Туристическая, 15)</span>
+                        </label>
                     </div>
-                </div>
-                <div class="form_group form_group_full">
-                    <div class="form_inline form_group_x-medium">
-                        <label for="corp" class="form_label">Строение/корпус:</label>
-                        <input type="text" id="corp" class="form_text" />
+                    <div class="mb25">
+                        <label for="delivery4" class="form_radio">
+                            <input type="radio" name="delivery-address" id="delivery4" class="s-toggle" data-toggle="newAdress" />
+                            <i></i>
+                            <span class="semibold">Новый адрес</span>
+                        </label>
                     </div>
-                    <div class="form_group_x-medium fright">
-                        <label for="office" class="form_label">Квартира/офис:</label>
-                        <input type="text" id="office" class="form_text" />
-                    </div>
-                </div>
-                <p class="semibold mb15">Дата и время доставки:</p>
-                <div class="form form_group form_group_full">
-                    <div class="form_inline form_group_x-medium">
-                        <label class="form_label">Дата:</label>
-                        <div class="date-select">
-                            <select class="select2">
-                                <option selected>21.01.2015</option>
-                                <option>22.01.2015</option>
-                                <option>23.01.2015</option>
-                                <option>24.01.2015</option>
-                            </select>
+                    <div class="hidden" data-show="newAdress">
+                        <div class="form_group_full">
+                            <div class="form_inline form_group">
+                                <label for="street" class="form_label">Улица:</label>
+                                <input type="text" id="street" class="form_text" />
+                            </div>
+                            <div class="form_group_x-thin fright">
+                                <label for="house" class="form_label">Дом:</label>
+                                <input type="text" id="house" class="form_text" />
+                            </div>
+                        </div>
+                        <div class="form_group form_group_full">
+                            <div class="form_inline form_group_x-medium">
+                                <label for="corp" class="form_label">Строение/корпус:</label>
+                                <input type="text" id="corp" class="form_text" />
+                            </div>
+                            <div class="form_group_x-medium fright">
+                                <label for="office" class="form_label">Квартира/офис:</label>
+                                <input type="text" id="office" class="form_text" />
+                            </div>
                         </div>
                     </div>
-                    <label for="soon" class="form_checkbox"><input type="checkbox" id="soon" checked /><i></i>Как можно раньше</label>
-                </div>
-                <div class="form form_group mb0">
-                    <label for="time" class="form_label">Время:</label>
-                    <select id="time" class="select2">
-                        <option selected>утро (с 9:00 до 12:00)</option>
-                        <option>день (с 12:00 до 16:00)</option>
-                        <option>вечер (с 16:00 до 20:00)</option>
-                    </select>
+                    <p class="semibold mb15">Дата и время доставки:</p>
+                    <div class="form form_group form_group_full">
+                        <div class="form_inline form_group_x-medium">
+                            <label for="date" class="form_label">Дата:</label>
+                            <input type="text" id="date" class="form_text date" value="04/10/2015" data-dependent="date" disabled/>
+                        </div>
+                    <label for="soon" class="form_checkbox"><input type="checkbox" id="soon" class="s-depend" data-depend="date" checked /><i></i>Как можно раньше</label>
+                    </div>
+                    <div class="form form_group mb0">
+                        <label for="time" class="form_label">Время:</label>
+                        <select id="time" class="select2">
+                            <option selected>утро (с 9:00 до 12:00)</option>
+                            <option>день (с 12:00 до 16:00)</option>
+                            <option>вечер (с 16:00 до 20:00)</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
