--- a/static/scss/_colors.scss
+++ b/static/scss/_colors.scss
@@ -12,6 +12,7 @@ $color-bg-grey: #f7f7f7;
 
 $color-border-orange: #e78800;
 $color-border-grey: #c3c3c3;
+$color-border-grey-light: #d9d9d9;
 
 $color-link-black: #231f20;
 $color-link-blue: #35c1ea;
