--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -38,5 +38,6 @@
 @import "_favorite";
 @import "_bonuses";
 @import "_delivery";
-@import "_global";
 @import "_card";
+@import "_article";
+@import "_global";
