--- a/templates/ordering_success.html
+++ b/templates/ordering_success.html
@@ -44,7 +44,7 @@
                     <label for="password" class="form_label">Придумайте пароль:</label>
                     <input type="password" id="password" class="form_text" />
                 </div>
-                <label for="show_pass" class="form_checkbox t30">
+                <label for="show_pass" class="form_checkbox">
                     <input type="checkbox" id="show_pass"/><i></i>Показать пароль, чтобы проверить правильность ввода
                 </label>
             </div>
