--- a/static/scss/_tags.scss
+++ b/static/scss/_tags.scss
@@ -76,3 +76,13 @@ input.tag-input {
 .ver-inline .tags {
   margin-top: 0;
 }
+.tag-simple {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 0 6px;
+  border: 1px solid $color-border-grey-light;
+  border-radius: 5px;
+  font-size: 11px;
+  line-height: 24px;
+  text-decoration: none;
+}
