--- a/static/scss/_titles.scss
+++ b/static/scss/_titles.scss
@@ -48,6 +48,13 @@ h3, .h3 {
   font-weight: normal;
   margin-bottom: 28px;
   line-height: 1em;
+
+  .super {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: -4px;
+    font-size: 12px;
+  }
 }
 
 h4, .h4 {
