--- a/templates/brand.html
+++ b/templates/brand.html
@@ -12,8 +12,8 @@
 				<div class="filter-cont sh">
 					<div class="catalog-title">Royal Canin</div>
 					<div class="filter-block opened default-opened">
-						<div class="filter-title special-title">Собаки:<span class="filter-title-arrow"></span></div>
-						<div class="subcontent">
+						<div class="filter-title special-title s-filter">Собаки:<span class="filter-title-arrow"></span></div>
+						<div class="subcontent s-filter-content">
 							<ul class="catalog-list">
 								<li><a href="filter.html" class="inner-border">Корма<span class="super-txt">(62)</span></a></li>
 								<li><a href="filter.html" class="inner-border">Здоровье<span class="super-txt">(18)</span></a></li>
@@ -22,8 +22,8 @@
 						</div>
 					</div>
 					<div class="filter-block">
-						<div class="filter-title special-title">Кошки:<span class="filter-title-arrow"></span></div>
-						<div class="subcontent">
+						<div class="filter-title special-title s-filter">Кошки:<span class="filter-title-arrow"></span></div>
+						<div class="subcontent s-filter-content">
 							<ul class="catalog-list">
 								<li><a href="filter.html" class="inner-border">Корма<span class="super-txt">(62)</span></a></li>
 								<li><a href="filter.html" class="inner-border">Здоровье<span class="super-txt">(18)</span></a></li>
