--- a/templates/filter.html
+++ b/templates/filter.html
@@ -49,16 +49,16 @@
 			<div class="filter-cont sh">
 				<div class="catalog-title">Корма</div>
 				<div class="filter-block opened default-opened">
-					<div class="filter-title">Тип корма:<span class="filter-title-arrow"></span></div>
-					<ul class="filter-content">
+					<div class="filter-title s-filter">Тип корма:<span class="filter-title-arrow"></span></div>
+					<ul class="filter-content s-filter-content">
 						<li class="filter-option"><div class="inner-border">Сухие корма<span class="super-txt">(159)</span></div></li>
 						<li class="filter-option"><div class="inner-border">Консервы<span class="super-txt">(81)</span></div></li>
 						<li class="filter-option"><div class="inner-border">Лакомства<span class="super-txt">(34)</span></div></li>
 					</ul>
 				</div>
 				<div class="filter-block opened default-opened">
-					<div class="filter-title">Цена:<span class="filter-title-arrow"></span></div>
-					<div class="slider-form filter-content">
+					<div class="filter-title s-filter">Цена:<span class="filter-title-arrow"></span></div>
+					<div class="slider-form filter-content s-filter-content">
 						<div class="slider-range-cont">
 							<div class="slider-range"></div>
 						</div>
@@ -75,8 +75,8 @@
 					</div>
 				</div>
 				<div class="filter-block">
-					<div class="filter-title">Возраст:<span class="filter-title-arrow"></span></div>
-					<ul class="filter-content">
+					<div class="filter-title s-filter">Возраст:<span class="filter-title-arrow"></span></div>
+					<ul class="filter-content s-filter-content">
 						<li class="filter-option"><div class="inner-border">Щенок<span class="super-txt">(159)</span></div></li>
 						<li class="filter-option"><div class="inner-border">Взрослая собака<span class="super-txt">(81)</span></div></li>
 						<li class="filter-option"><div class="inner-border">Старая собака<span class="super-txt">(34)</span></div></li>
