--- a/templates/help.html
+++ b/templates/help.html
@@ -57,8 +57,8 @@
                             <h2>Про заказ</h2>
                         </div>
                         <div class="filter-block">
-                            <div class="filter-help-title">1 Как заказать товар?<span class="filter-title-arrow"></span></div>
-                            <div class="filter-content filter-help-content">
+                            <div class="filter-help_title s-filter">1 Как заказать товар?<span class="filter-title-arrow"></span></div>
+                            <div class="filter-content filter-help_content s-filter-content">
                                 <p class="semibold mb25">Ответ:</p>
                                 <div class="text_grey">
                                     <p>Еще Аристотель в своей «Политике» говорил, что музыка, воздействуя на человека, доставляет «своего рода очищение, то есть облегчение, связанное с наслаждением», однако канал сложен. Асинхронное ритмическое поле образует флюгель-горн. Адажио, согласно традиционным представлениям, просветляет зеркальный форшлаг. Внутридискретное арпеджио образует флюгель-горн.</p>
@@ -66,8 +66,8 @@
                             </div>
                         </div>
                         <div class="filter-block opened default-opened">
-                            <div class="filter-help-title">2 Как оформить заказ?<span class="filter-title-arrow"></span></div>
-                            <div class="filter-content filter-help-content">
+                            <div class="filter-help_title s-filter">2 Как оформить заказ?<span class="filter-title-arrow"></span></div>
+                            <div class="filter-content filter-help_content s-filter-content">
                                 <p class="semibold mb25">Ответ:</p>
                                 <div class="text_grey">
                                     <p>Еще Аристотель в своей «Политике» говорил, что музыка, воздействуя на человека, доставляет «своего рода очищение, то есть облегчение, связанное с наслаждением», однако канал сложен. Асинхронное ритмическое поле образует флюгель-горн. Адажио, согласно традиционным представлениям, просветляет зеркальный форшлаг. Внутридискретное арпеджио образует флюгель-горн.</p>
@@ -75,8 +75,8 @@
                             </div>
                         </div>
                         <div class="filter-block">
-                            <div class="filter-help-title">3 Как убедить енота чтобы он перестал стирать все подряд?<span class="filter-title-arrow"></span></div>
-                            <div class="filter-content filter-help-content">
+                            <div class="filter-help_title s-filter">3 Как убедить енота чтобы он перестал стирать все подряд?<span class="filter-title-arrow"></span></div>
+                            <div class="filter-content filter-help_content s-filter-content">
                                 <p class="semibold mb25">Ответ:</p>
                                 <div class="text_grey">
                                     <p>Еще Аристотель в своей «Политике» говорил, что музыка, воздействуя на человека, доставляет «своего рода очищение, то есть облегчение, связанное с наслаждением», однако канал сложен. Асинхронное ритмическое поле образует флюгель-горн. Адажио, согласно традиционным представлениям, просветляет зеркальный форшлаг. Внутридискретное арпеджио образует флюгель-горн.</p>
