--- a/templates/includes/_regions.html
+++ b/templates/includes/_regions.html
@@ -47,5 +47,5 @@
             <td>Железнодорожный, Щелково</td>
         </tr>
     </table>
-    <div id="map_regions" class="map"></div>
+    <div id="map_regions" class="delivery_map"></div>
 </div>
