--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -12,8 +12,8 @@
 				<div class="filter-cont sh">
 					<div class="catalog-title">Фильтр</div>
 					<div class="filter-block opened default-opened">
-						<div class="filter-title">Цена:<span class="filter-title-arrow"></span></div>
-						<div class="slider-form filter-content">
+						<div class="filter-title s-filter">Цена:<span class="filter-title-arrow"></span></div>
+						<div class="slider-form filter-content s-filter-content">
 							<div class="slider-range-cont">
 								<div class="slider-range"></div>
 							</div>	
@@ -30,8 +30,8 @@
 						</div>
 					</div>
 					<div class="filter-block opened default-opened">
-						<div class="filter-title">Возраст:<span class="filter-title-arrow"></span></div>
-						<ul class="filter-content">
+						<div class="filter-title s-filter">Возраст:<span class="filter-title-arrow"></span></div>
+						<ul class="filter-content s-filter-content">
 							<li class="filter-option">
 								<div class="inner-border">Щенок<span class="super-txt">(159)</span><span class="option-del"></span></div>
 							</li>
@@ -44,9 +44,9 @@
 						</ul>
 					</div>
 					<div class="filter-block opened default-opened">
-						<div class="filter-title special-title">Бренд:<span class="filter-title-arrow"></span></div>
-						<div class="subcontent">
-							<ul class="filter-content">
+						<div class="filter-title special-title s-filter">Бренд:<span class="filter-title-arrow"></span></div>
+						<div class="subcontent s-filter-content">
+							<ul class="filter-content s-filter-content">
 								<li class="filter-option">
 									<div class="inner-border">Acana<span class="super-txt">(159)</span><span class="option-del"></span></div></li>
 								<li class="filter-option">
